--- a/war/css/tonyu.css
+++ b/war/css/tonyu.css
@@ -7,8 +7,12 @@ body {
   text-align: center;
 }
 
+.prjDirHeader {
+	background-color: #af8;
+}
 .project {
-	float: left;
+	/*float: left;*/
+	display: inline-block;
 	width: 132px;
 	margin: 16px;
     text-align: center;
