Ver0821-1(Sharetweet is kowareta)

--- a/war/css/tonyu.css
+++ b/war/css/tonyu.css
@@ -2,6 +2,12 @@ body {
     font-family: "MS UI Gothic",sans-serif;
 	padding-top: 50px;
 }
+.ui-dialog,.ui-dialog-content {
+    -webkit-box-sizing: content-box!important;
+    -moz-box-sizing:content-box!important;
+    box-sizing: content-box!important;
+}
+
 .starter-template {
   padding: 40px 15px;
   text-align: center;
