--- a/war/css/jquery-ui.css
+++ b/war/css/jquery-ui.css
@@ -807,7 +807,7 @@ body .ui-tooltip {
 	color: #222222;
 }
 .ui-widget-content a {
-	color: #222222;
+	color: #2222f2;
 }
 .ui-widget-header {
 	border: 1px solid #aaaaaa;
